Refactor code for formatting consistency
Update code in various files to improve readability and ensure consistent formatting, particularly around parentheses and line breaks. Clean up unused or redundant elements in the hyperparameter optimization notebook while simplifying its structure.

--- a/docs/_sources/mds/agent-performance-analysis.ipynb
+++ b/docs/_sources/mds/agent-performance-analysis.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "seed = 42\n",
     "optimization_horizon = 20_000\n",
-    "log_every=200\n",
+    "log_every = 200\n",
     "\n",
     "# Instantiate the MDP\n",
     "mdp = RiverSwimEpisodic(seed=0, size=4, p_rand=0.01)\n",
@@ -262,8 +262,8 @@
     "    mdp_specs=make_mdp_spec(mdp),\n",
     "    seed=seed,\n",
     "    optimization_horizon=optimization_horizon,\n",
-    "    c_1 = 0.95,\n",
-    "    p = 0.05\n",
+    "    c_1=0.95,\n",
+    "    p=0.05,\n",
     ")\n",
     "psrl_agent = PSRLEpisodic(\n",
     "    mdp_specs=make_mdp_spec(mdp),\n",
@@ -650,15 +650,15 @@
     "    mdp_specs=make_mdp_spec(mdp_short),\n",
     "    seed=seed,\n",
     "    optimization_horizon=optimization_horizon,\n",
-    "    c_1 = 0.95,\n",
-    "    p = 0.05\n",
+    "    c_1=0.95,\n",
+    "    p=0.05,\n",
     ")\n",
     "agent_for_long = QLearningEpisodic(\n",
     "    mdp_specs=make_mdp_spec(mdo_long),\n",
     "    seed=seed,\n",
     "    optimization_horizon=2000,\n",
-    "    c_1 = 0.95,\n",
-    "    p = 0.05\n",
+    "    c_1=0.95,\n",
+    "    p=0.05,\n",
     ")\n",
     "\n",
     "# Short Riverswim interaction\n",
@@ -760,7 +760,9 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(12, 4))\n",
     "loop_long.plot(\"normalized_cumulative_expected_reward\", ax, label=\"q-learning (1)\")\n",
-    "loop_short.plot(\"normalized_cumulative_expected_reward\", ax, label=\"q-learning (2)\", baselines=[])\n",
+    "loop_short.plot(\n",
+    "    \"normalized_cumulative_expected_reward\", ax, label=\"q-learning (2)\", baselines=[]\n",
+    ")\n",
     "glue(\"normalized_cumulative_expected_reward\", fig, display=False)\n",
     "plt.close()"
    ]
@@ -810,7 +812,9 @@
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(12, 4))\n",
     "loop_long.plot(\"normalized_cumulative_regret\", ax, label=\"q-learning (1)\")\n",
-    "loop_short.plot(\"normalized_cumulative_regret\", ax, label=\"q-learning (2)\", baselines=[])\n",
+    "loop_short.plot(\n",
+    "    \"normalized_cumulative_regret\", ax, label=\"q-learning (2)\", baselines=[]\n",
+    ")\n",
     "glue(\"normalized_cumulative_regret\", fig, display=False)\n",
     "plt.close()"
    ]
