--- a/docs/_sources/mds/benchmark-analysis.ipynb
+++ b/docs/_sources/mds/benchmark-analysis.ipynb
@@ -30,16 +30,33 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import os\n",
     "import shutil\n",
     "from myst_nb import glue\n",
     "\n",
-    "from colosseum.analysis.plots import plot_indicator_in_hardness_space, agent_performances_per_mdp_plot\n",
-    "from colosseum.analysis.tables import get_latex_table_of_average_indicator, get_latex_table_of_indicators\n",
+    "from colosseum.analysis.plots import (\n",
+    "    plot_indicator_in_hardness_space,\n",
+    "    agent_performances_per_mdp_plot,\n",
+    ")\n",
+    "from colosseum.analysis.tables import (\n",
+    "    get_latex_table_of_average_indicator,\n",
+    "    get_latex_table_of_indicators,\n",
+    ")\n",
     "\n",
-    "benchmark_log_folder = \"./experiments\" + os.sep + \"tabular\" + os.sep + \"benchmarking\" + os.sep + \"paper_results\" + os.sep + \"benchmark_continuous_communicating\""
+    "benchmark_log_folder = (\n",
+    "    \"./experiments\"\n",
+    "    + os.sep\n",
+    "    + \"tabular\"\n",
+    "    + os.sep\n",
+    "    + \"benchmarking\"\n",
+    "    + os.sep\n",
+    "    + \"paper_results\"\n",
+    "    + os.sep\n",
+    "    + \"benchmark_continuous_communicating\"\n",
+    ")"
    ]
   },
   {
@@ -663,7 +680,9 @@
     }
    ],
    "source": [
-    "fig = plot_indicator_in_hardness_space(benchmark_log_folder, fontsize=24, savefig_folder = None)"
+    "fig = plot_indicator_in_hardness_space(\n",
+    "    benchmark_log_folder, fontsize=24, savefig_folder=None\n",
+    ")"
    ]
   },
   {
@@ -750,7 +769,7 @@
     "    figsize_scale=5,\n",
     "    standard_error=True,\n",
     "    n_rows=7,\n",
-    "    savefig_folder = None\n",
+    "    savefig_folder=None,\n",
     ")"
    ]
   },
@@ -812,6 +831,7 @@
    "outputs": [],
    "source": [
     "from colosseum import config\n",
+    "\n",
     "shutil.rmtree(\"tmp\", ignore_errors=True)\n",
     "shutil.rmtree(config.get_hardness_measures_cache_folder(), ignore_errors=True)"
    ]
