--- a/docs/_sources/mds/benchmark-custom.ipynb
+++ b/docs/_sources/mds/benchmark-custom.ipynb
@@ -169,7 +169,9 @@
     "\n",
     "# We define the benchmark object with the sampled MDP configs and the previously defined experiment config\n",
     "benchmark = ColosseumBenchmark(\n",
-    "    name=\"episodic_randomly_sampled\", mdps_gin_configs=mdps_configs, experiment_config=experiment_config\n",
+    "    name=\"episodic_randomly_sampled\",\n",
+    "    mdps_gin_configs=mdps_configs,\n",
+    "    experiment_config=experiment_config,\n",
     ")"
    ]
   },
@@ -191,10 +193,14 @@
    "outputs": [],
    "source": [
     "# Instantiate the episodic ergodic benchmark and take its MDP configurations\n",
-    "mdps_configs = ColosseumDefaultBenchmark.EPISODIC_ERGODIC.get_benchmark().mdps_gin_configs\n",
+    "mdps_configs = (\n",
+    "    ColosseumDefaultBenchmark.EPISODIC_ERGODIC.get_benchmark().mdps_gin_configs\n",
+    ")\n",
     "\n",
     "# Save the configurations in a new ColosseumBenchmark object with a custom name and the previously defined experiment config\n",
-    "benchmark = ColosseumBenchmark(\"borrowing_from_default\", mdps_configs, experiment_config)"
+    "benchmark = ColosseumBenchmark(\n",
+    "    \"borrowing_from_default\", mdps_configs, experiment_config\n",
+    ")"
    ]
   },
   {
@@ -238,6 +244,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.rmtree(config.get_experiments_folder())"
    ]
   }
