--- a/docs/_sources/mds/benchmark-introduction.ipynb
+++ b/docs/_sources/mds/benchmark-introduction.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import shutil\n",
     "from glob import glob\n",
@@ -41,6 +42,7 @@
     "\n",
     "from colosseum.benchmark import ColosseumDefaultBenchmark\n",
     "from colosseum.benchmark.utils import instantiate_benchmark_folder\n",
+    "\n",
     "\n",
     "def print_benchmark_configurations():\n",
     "    bdir = glob(\"benchmark_*\")[0]\n",
