--- a/docs/_sources/mds/benchmark-running.ipynb
+++ b/docs/_sources/mds/benchmark-running.ipynb
@@ -67,7 +67,9 @@
     "from colosseum.agent.agents.infinite_horizon import QLearningContinuous, UCRL2Continuous\n",
     "from colosseum.agent.utils import sample_agent_gin_configs_file\n",
     "from colosseum.benchmark.benchmark import ColosseumDefaultBenchmark\n",
-    "from colosseum.benchmark.run import instantiate_and_get_exp_instances_from_agents_and_benchmarks\n",
+    "from colosseum.benchmark.run import (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks,\n",
+    ")\n",
     "from colosseum.experiment import ExperimentConfig\n",
     "from colosseum.experiment.experiment_instances import run_experiment_instances\n",
     "\n",
@@ -140,6 +142,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.rmtree(config.get_experiments_folder())"
    ]
   }
