--- a/docs/_sources/mds/benchmark-scaling.ipynb
+++ b/docs/_sources/mds/benchmark-scaling.ipynb
@@ -73,8 +73,12 @@
     "from colosseum.agent.agents.episodic import QLearningEpisodic\n",
     "from colosseum.agent.agents.infinite_horizon import QLearningContinuous\n",
     "from colosseum.benchmark import ColosseumDefaultBenchmark\n",
-    "from colosseum.benchmark.run import instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt\n",
-    "from colosseum.benchmark.run import instantiate_and_get_exp_instances_from_agents_and_benchmarks\n",
+    "from colosseum.benchmark.run import (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt,\n",
+    ")\n",
+    "from colosseum.benchmark.run import (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks,\n",
+    ")\n",
     "from colosseum.experiment.experiment_instances import save_instances_to_folder\n",
     "from colosseum.hyperopt import SMALL_HYPEROPT_CONF\n",
     "from colosseum.hyperopt.selection import retrieve_best_agent_config_from_hp_folder\n",
