--- a/docs/_sources/mds/colosseum-configurations.ipynb
+++ b/docs/_sources/mds/colosseum-configurations.ipynb
@@ -167,11 +167,17 @@
     }
    ],
    "source": [
-    "print(\"Default hardness measures cache folder: \", config.get_hardness_measures_cache_folder())\n",
+    "print(\n",
+    "    \"Default hardness measures cache folder: \",\n",
+    "    config.get_hardness_measures_cache_folder(),\n",
+    ")\n",
     "\n",
     "# If you prefer, you can set a different folder path\n",
     "config.set_hardness_measures_cache_folder(\"my_cached_hardness_measures_folder\")\n",
-    "print(\"Custom hardness measures cache folder: \", config.get_hardness_measures_cache_folder())"
+    "print(\n",
+    "    \"Custom hardness measures cache folder: \",\n",
+    "    config.get_hardness_measures_cache_folder(),\n",
+    ")"
    ]
   },
   {
@@ -298,6 +304,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.rmtree(\"tabular\")\n",
     "shutil.rmtree(config.get_hardness_measures_cache_folder())"
    ]
