--- a/docs/_sources/mds/hardness-analysis.ipynb
+++ b/docs/_sources/mds/hardness-analysis.ipynb
@@ -35,7 +35,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -221,7 +222,9 @@
     }
    ],
    "source": [
-    "print(f\"Sum of the reciprocals of the suboptimality gaps: {mdp.sum_reciprocals_suboptimality_gaps:.2f}\")"
+    "print(\n",
+    "    f\"Sum of the reciprocals of the suboptimality gaps: {mdp.sum_reciprocals_suboptimality_gaps:.2f}\"\n",
+    ")"
    ]
   },
   {
@@ -479,12 +482,14 @@
     "    \"\"\"\n",
     "    return mdp.n_states\n",
     "\n",
+    "\n",
     "def value_norm_by_diameter(mdp: BaseMDP) -> float:\n",
     "    \"\"\"\n",
     "    A measure of hardness obtained by multiplying the diameter by the environmental value norm.\n",
     "    \"\"\"\n",
     "    return mdp.diameter * mdp.value_norm\n",
-    "    \n",
+    "\n",
+    "\n",
     "custom_scenario_SimpleGridContinuous = HardnessAnalysisParams(\n",
     "    mdp_class=SimpleGridContinuous,\n",
     "    varying_params_name=\"p_rand\",\n",
@@ -511,6 +516,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.rmtree(\"tmp\", ignore_errors=True)\n",
     "shutil.rmtree(\"cached_hardness_measures\", ignore_errors=True)\n",
     "shutil.rmtree(\"tutorial\", ignore_errors=True)"
