--- a/docs/_sources/mds/hyperopt.ipynb
+++ b/docs/_sources/mds/hyperopt.ipynb
@@ -90,10 +90,17 @@
     "from colosseum import config\n",
     "from colosseum.agent.agents.episodic import QLearningEpisodic\n",
     "from colosseum.agent.agents.infinite_horizon import QLearningContinuous\n",
-    "from colosseum.benchmark.run import instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt\n",
+    "from colosseum.benchmark.run import (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt,\n",
+    ")\n",
     "from colosseum.experiment.experiment_instances import run_experiment_instances\n",
-    "from colosseum.hyperopt import DEFAULT_HYPEROPT_CONF, DEFAULT_HYPEROPT_CONF_NONTABULAR, SMALL_HYPEROPT_CONF, \\\n",
-    "    SMALL_HYPEROPT_CONF_NONTABULAR, HyperOptConfig\n",
+    "from colosseum.hyperopt import (\n",
+    "    DEFAULT_HYPEROPT_CONF,\n",
+    "    DEFAULT_HYPEROPT_CONF_NONTABULAR,\n",
+    "    SMALL_HYPEROPT_CONF,\n",
+    "    SMALL_HYPEROPT_CONF_NONTABULAR,\n",
+    "    HyperOptConfig,\n",
+    ")\n",
     "from colosseum.hyperopt.selection import retrieve_best_agent_config_from_hp_folder\n",
     "from colosseum.hyperopt.utils import sample_agent_configs_and_benchmarks_for_hyperopt\n",
     "from colosseum.mdp.custom_mdp import CustomEpisodic\n",
@@ -102,32 +109,33 @@
     "\n",
     "\n",
     "def pretty_print(hpc):\n",
-    "  index = [\n",
-    "      \"Default tabular\",\n",
-    "      \"Small tabular\",\n",
-    "      \"Default non-tabular\",\n",
-    "      \"Small non-tabular\",\n",
-    "  ]\n",
-    "  columns = list(asdict(DEFAULT_HYPEROPT_CONF))\n",
-    "  data = [\n",
-    "      list(map(str, asdict(DEFAULT_HYPEROPT_CONF).values())),\n",
-    "      list(map(str, asdict(SMALL_HYPEROPT_CONF).values())),\n",
-    "      list(\n",
-    "          map(\n",
-    "              lambda x: x.__name__ if \"emission_maps\" in str(x) else str(x),\n",
-    "              asdict(DEFAULT_HYPEROPT_CONF_NONTABULAR).values(),\n",
-    "          )\n",
-    "      ),\n",
-    "      list(\n",
-    "          map(\n",
-    "              lambda x: x.__name__ if \"emission_maps\" in str(x) else str(x),\n",
-    "              asdict(SMALL_HYPEROPT_CONF_NONTABULAR).values(),\n",
-    "          )\n",
-    "      ),\n",
-    "  ]\n",
-    "  \n",
-    "  return pd.DataFrame(data, index, columns).T\n",
-    "  \n",
+    "    index = [\n",
+    "        \"Default tabular\",\n",
+    "        \"Small tabular\",\n",
+    "        \"Default non-tabular\",\n",
+    "        \"Small non-tabular\",\n",
+    "    ]\n",
+    "    columns = list(asdict(DEFAULT_HYPEROPT_CONF))\n",
+    "    data = [\n",
+    "        list(map(str, asdict(DEFAULT_HYPEROPT_CONF).values())),\n",
+    "        list(map(str, asdict(SMALL_HYPEROPT_CONF).values())),\n",
+    "        list(\n",
+    "            map(\n",
+    "                lambda x: x.__name__ if \"emission_maps\" in str(x) else str(x),\n",
+    "                asdict(DEFAULT_HYPEROPT_CONF_NONTABULAR).values(),\n",
+    "            )\n",
+    "        ),\n",
+    "        list(\n",
+    "            map(\n",
+    "                lambda x: x.__name__ if \"emission_maps\" in str(x) else str(x),\n",
+    "                asdict(SMALL_HYPEROPT_CONF_NONTABULAR).values(),\n",
+    "            )\n",
+    "        ),\n",
+    "    ]\n",
+    "\n",
+    "    return pd.DataFrame(data, index, columns).T\n",
+    "\n",
+    "\n",
     "experiments_folder = \"tutorial\"\n",
     "experiment_name = \"hyperopt\"\n",
     "\n",
@@ -299,11 +307,15 @@
     "agent_cls = [QLearningContinuous, QLearningEpisodic]\n",
     "\n",
     "# Create the benchmarks for the given agents classes and hyperparameters optimzation configuration\n",
-    "hyperopt_agents_and_benchmarks = sample_agent_configs_and_benchmarks_for_hyperopt(agent_cls, hpoc)\n",
+    "hyperopt_agents_and_benchmarks = sample_agent_configs_and_benchmarks_for_hyperopt(\n",
+    "    agent_cls, hpoc\n",
+    ")\n",
     "\n",
     "# Obtain the instances and run them locally\n",
-    "hp_exp_instances = instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt(\n",
-    "    hyperopt_agents_and_benchmarks\n",
+    "hp_exp_instances = (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt(\n",
+    "        hyperopt_agents_and_benchmarks\n",
+    "    )\n",
     ")\n",
     "run_experiment_instances(hp_exp_instances)\n",
     "\n",
