--- a/docs/_sources/mds/mdp-functionalities.ipynb
+++ b/docs/_sources/mds/mdp-functionalities.ipynb
@@ -40,7 +40,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3' \n",
+    "\n",
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "\n",
     "import networkx as nx\n",
     "import numpy as np\n",
@@ -84,37 +85,77 @@
     "\n",
     "### Transition kernel\n",
     "T = [\n",
-    "  [\n",
-    "      [0.0, 1.0, 0.0, 0.0], # next state distribtion for selecting action 0 in state 0, i.e. T(0, 0)\n",
-    "      [0.0, 0.0, 1.0, 0.0], # next state distribtion for selecting action 1 in state 0, i.e. T(0, 1)\n",
-    "  ],\n",
-    "  [\n",
-    "      [0.0, 0.0, 0.5, 0.5], # next state distribution for selecting action 0 in state 1, i.e. T(1, 0)\n",
-    "      [0.0, 0.8, 0.1, 0.1], # next state distribution for selecting action 1 in state 1, i.e. T(1, 1)\n",
-    "  ],\n",
-    "  [\n",
-    "      [0.0, 0.5, 0.0, 0.5], # next state distribution for selecting action 0 in state 2, i.e. T(2, 0)\n",
-    "      [0.0, 0.1, 0.8, 0.1], # next state distribution for selecting action 1 in state 2, i.e. T(2, 1)\n",
-    "  ],\n",
-    "  [\n",
-    "      [0.5, 0.25, 0.25, 0.0], # next state distribution for selecting action 0 in state 3, i.e. T(3, 0)\n",
-    "      [0.1, 0.10, 0.10, 0.7], # next state distribution for selecting action 1 in state 3, i.e. T(3, 1)\n",
-    "  ],\n",
+    "    [\n",
+    "        [\n",
+    "            0.0,\n",
+    "            1.0,\n",
+    "            0.0,\n",
+    "            0.0,\n",
+    "        ],  # next state distribtion for selecting action 0 in state 0, i.e. T(0, 0)\n",
+    "        [\n",
+    "            0.0,\n",
+    "            0.0,\n",
+    "            1.0,\n",
+    "            0.0,\n",
+    "        ],  # next state distribtion for selecting action 1 in state 0, i.e. T(0, 1)\n",
+    "    ],\n",
+    "    [\n",
+    "        [\n",
+    "            0.0,\n",
+    "            0.0,\n",
+    "            0.5,\n",
+    "            0.5,\n",
+    "        ],  # next state distribution for selecting action 0 in state 1, i.e. T(1, 0)\n",
+    "        [\n",
+    "            0.0,\n",
+    "            0.8,\n",
+    "            0.1,\n",
+    "            0.1,\n",
+    "        ],  # next state distribution for selecting action 1 in state 1, i.e. T(1, 1)\n",
+    "    ],\n",
+    "    [\n",
+    "        [\n",
+    "            0.0,\n",
+    "            0.5,\n",
+    "            0.0,\n",
+    "            0.5,\n",
+    "        ],  # next state distribution for selecting action 0 in state 2, i.e. T(2, 0)\n",
+    "        [\n",
+    "            0.0,\n",
+    "            0.1,\n",
+    "            0.8,\n",
+    "            0.1,\n",
+    "        ],  # next state distribution for selecting action 1 in state 2, i.e. T(2, 1)\n",
+    "    ],\n",
+    "    [\n",
+    "        [\n",
+    "            0.5,\n",
+    "            0.25,\n",
+    "            0.25,\n",
+    "            0.0,\n",
+    "        ],  # next state distribution for selecting action 0 in state 3, i.e. T(3, 0)\n",
+    "        [\n",
+    "            0.1,\n",
+    "            0.10,\n",
+    "            0.10,\n",
+    "            0.7,\n",
+    "        ],  # next state distribution for selecting action 1 in state 3, i.e. T(3, 1)\n",
+    "    ],\n",
     "]\n",
     "\n",
     "### Reward distributions\n",
     "\n",
     "# defined as a dictionary of scipy distributions\n",
     "R = {\n",
-    "  (s, a): beta(np.random.uniform(0, 30), np.random.uniform(0, 30))\n",
-    "  for s in range(n_states)\n",
-    "  for a in range(n_actions)\n",
+    "    (s, a): beta(np.random.uniform(0, 30), np.random.uniform(0, 30))\n",
+    "    for s in range(n_states)\n",
+    "    for a in range(n_actions)\n",
     "}\n",
     "# or as a matrix deterministic rewards\n",
     "# R = np.random.randn(n_states, n_actions)\n",
     "\n",
     "# Starting state distribution that assigns equal probability to state 0 and state 1\n",
-    "T_0 = {0: 0.5, 1 : 0.5}\n",
+    "T_0 = {0: 0.5, 1: 0.5}\n",
     "\n",
     "# Instantiate the CustomEpisodic object\n",
     "mdp_custom = CustomEpisodic(seed=42, T_0=T_0, T=np.array(T).astype(np.float32), R=R)"
@@ -2639,13 +2680,13 @@
     "    font_color=\"white\",\n",
     "    node_size=1500,\n",
     "    ax=ax,\n",
-    "    vmin = 0,\n",
-    "    vmax = 1\n",
+    "    vmin=0,\n",
+    "    vmax=1,\n",
     ")\n",
     "ax.set_title(\"Optimal value function\")\n",
     "glue(\"ov\", fig)\n",
     "plt.show()\n",
-    "#%%\n",
+    "# %%\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
     "nx.draw(\n",
     "    mdp.G,\n",
@@ -2660,7 +2701,7 @@
     "plt.tight_layout()\n",
     "glue(\"wv\", fig)\n",
     "plt.show()\n",
-    "#%%\n",
+    "# %%\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
     "nx.draw(\n",
     "    mdp.G,\n",
@@ -2674,7 +2715,7 @@
     "ax.set_title(\"Value function of the random policy\")\n",
     "glue(\"rv\", fig)\n",
     "plt.show()\n",
-    "#%%\n",
+    "# %%\n",
     "fig, ax = plt.subplots(1, 1, figsize=(6, 6))\n",
     "nx.draw(\n",
     "    mdp.G,\n",
