--- a/docs/_sources/mds/quickstart.ipynb
+++ b/docs/_sources/mds/quickstart.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\"\n",
     "from typing import Dict, Any\n",
     "\n",
@@ -136,7 +137,7 @@
    "outputs": [],
    "source": [
     "class QModel(BaseMDPModel):\n",
-    "    \"\"\" An MDP model for q-value estimates. \"\"\"\n",
+    "    \"\"\"An MDP model for q-value estimates.\"\"\"\n",
     "\n",
     "    def __init__(\n",
     "        self,\n",
@@ -156,19 +157,24 @@
     "        \"\"\"\n",
     "        super(QModel, self).__init__(seed, mdp_specs)\n",
     "        self._alpha = alpha\n",
-    "        \n",
+    "\n",
     "        # Random initialization of the q value estimates\n",
-    "        self.Q = self._rng.randn(self._H, self._n_states, self._n_actions).astype(np.float32)\n",
-    "        \n",
+    "        self.Q = self._rng.randn(self._H, self._n_states, self._n_actions).astype(\n",
+    "            np.float32\n",
+    "        )\n",
+    "\n",
     "        # State values initialised to the maximum reward\n",
-    "        self.V = np.zeros((self._H + 1, self._n_states), np.float32) + mdp_specs.rewards_range[1]\n",
+    "        self.V = (\n",
+    "            np.zeros((self._H + 1, self._n_states), np.float32)\n",
+    "            + mdp_specs.rewards_range[1]\n",
+    "        )\n",
     "\n",
     "    def step_update(\n",
     "        self, ts_t: dm_env.TimeStep, a_t: \"ACTION_TYPE\", ts_tp1: dm_env.TimeStep, h: int\n",
     "    ):\n",
     "        \"\"\"\n",
     "        updates the q value estimate using the q-learning update rule.\n",
-    "        \n",
+    "\n",
     "        Parameters\n",
     "        ----------\n",
     "        ts_t : dm_env.TimeStep\n",
@@ -180,7 +186,7 @@
     "        h : int\n",
     "          the in-episode time step.\n",
     "        \"\"\"\n",
-    "    \n",
+    "\n",
     "        s_t = ts_t.observation\n",
     "        s_tp1 = ts_tp1.observation\n",
     "\n",
@@ -236,7 +242,7 @@
     "        self._epsilon = epsilon\n",
     "        self._n_states = self._mdp_spec.observations.num_values\n",
     "        self._n_actions = self._mdp_spec.actions.num_values\n",
-    "        \n",
+    "\n",
     "        self._q_values = None\n",
     "\n",
     "    def set_q_values(self, Q: np.ndarray):\n",
@@ -288,7 +294,7 @@
     "    \"\"\"\n",
     "    The Agent class for the q-learning algorithm.\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    @staticmethod\n",
     "    def is_episodic() -> bool:\n",
     "        return True\n",
@@ -302,7 +308,7 @@
     "        # MDP model hyperparameters\n",
     "        alpha: float,\n",
     "        # Actor hyperparameters\n",
-    "        epsilon : float\n",
+    "        epsilon: float,\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Parameters\n",
@@ -319,10 +325,10 @@
     "            The probability of selecting an action at random. By default, the probability is set to 0.05.\n",
     "        \"\"\"\n",
     "        assert 0 < alpha < 1\n",
-    "        \n",
+    "\n",
     "        # The MDP model\n",
     "        mdp_model = QModel(seed, mdp_specs, alpha)\n",
-    "        \n",
+    "\n",
     "        # The Actor model\n",
     "        actor = QValuesActor(seed, mdp_specs, epsilon)\n",
     "\n",
@@ -340,26 +346,26 @@
     "        \"\"\"\n",
     "        Q_average = self._mdp_model.Q\n",
     "        return get_policy_from_q_values(Q_average, True)\n",
-    "    \n",
+    "\n",
     "    def before_start_interacting(self):\n",
     "        # Initialize the q-values in the actor\n",
     "        self._actor.set_q_values(self._mdp_model.Q)\n",
-    "    \n",
+    "\n",
     "    def episode_end_update(self):\n",
     "        \"\"\"\n",
     "        The Q-learning algorithm does not update anything at the end of the episode.\n",
     "        \"\"\"\n",
-    "    \n",
+    "\n",
     "    def step_update(\n",
-    "            self,\n",
-    "            ts_t: dm_env.TimeStep,\n",
-    "            a_t: \"ACTION_TYPE\",\n",
-    "            ts_tp1: dm_env.TimeStep,\n",
-    "            time: int,\n",
-    "        ):\n",
+    "        self,\n",
+    "        ts_t: dm_env.TimeStep,\n",
+    "        a_t: \"ACTION_TYPE\",\n",
+    "        ts_tp1: dm_env.TimeStep,\n",
+    "        time: int,\n",
+    "    ):\n",
     "        # This automatically updates the MDP model\n",
     "        super(QLearningAgent, self).step_update(ts_t, a_t, ts_tp1, time)\n",
-    "        \n",
+    "\n",
     "        # Update the q-estimates at every time step\n",
     "        self._actor.set_q_values(self._mdp_model.Q)\n",
     "\n",
@@ -460,9 +466,13 @@
     "config.register_agent_class(QLearningAgent)\n",
     "\n",
     "# Obtain the best hyperparameters\n",
-    "hyperopt_agents_and_benchmarks = sample_agent_configs_and_benchmarks_for_hyperopt([QLearningAgent], SMALL_HYPEROPT_CONF)\n",
-    "hp_exp_instances = instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt(\n",
-    "    hyperopt_agents_and_benchmarks\n",
+    "hyperopt_agents_and_benchmarks = sample_agent_configs_and_benchmarks_for_hyperopt(\n",
+    "    [QLearningAgent], SMALL_HYPEROPT_CONF\n",
+    ")\n",
+    "hp_exp_instances = (\n",
+    "    instantiate_and_get_exp_instances_from_agents_and_benchmarks_for_hyperopt(\n",
+    "        hyperopt_agents_and_benchmarks\n",
+    "    )\n",
     ")\n",
     "run_experiment_instances(hp_exp_instances)\n",
     "agents_hps = retrieve_best_agent_config_from_hp_folder()\n",
@@ -496,15 +506,15 @@
     "\n",
     "# Retrieve the EPISODIC_QUICK_TEST benchmark\n",
     "benchmark = ColosseumDefaultBenchmark.EPISODIC_QUICK_TEST.get_benchmark()\n",
-    "agents_and_benchmarks = [\n",
-    "    (agents_hps, benchmark)\n",
-    "]\n",
+    "agents_and_benchmarks = [(agents_hps, benchmark)]\n",
     "\n",
     "# Instantiate the benchmark\n",
     "benchmark = ColosseumDefaultBenchmark.EPISODIC_QUICK_TEST.get_benchmark()\n",
     "\n",
     "# Benchmarking the agents\n",
-    "experiment_instances = instantiate_and_get_exp_instances_from_agents_and_benchmarks(agents_and_benchmarks)\n",
+    "experiment_instances = instantiate_and_get_exp_instances_from_agents_and_benchmarks(\n",
+    "    agents_and_benchmarks\n",
+    ")\n",
     "run_experiment_instances(experiment_instances)"
    ]
   },
@@ -539,8 +549,7 @@
    ],
    "source": [
     "agent_performances_per_mdp_plot(\n",
-    "    benchmark.get_experiments_benchmark_log_folder(),\n",
-    "    \"cumulative_regret\"\n",
+    "    benchmark.get_experiments_benchmark_log_folder(), \"cumulative_regret\"\n",
     ");"
    ]
   },
@@ -557,6 +566,7 @@
    "outputs": [],
    "source": [
     "import shutil\n",
+    "\n",
     "shutil.rmtree(\"tutorial\")"
    ]
   }
